welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt() {
  avance()
  var col = getCouleurSol()
    while(!porteBiscuit()){
      if (isFacingTrail(col)){
        baisseBrosse()
        avance()
        if (estSurBiscuit()){
          prendBiscuit()
        }
        leveBrosse()
      }else{
        gauche()
      }
    }
}

def isFacingTrail(col: Int):Boolean = {
  
  if (estFaceMur()){
    return false
  }else{
  	avance()
  	if ((getCouleurSol()==Color.green && col == color.green)||(getCouleurSol() == color.pink && col = color.pink)){
    	recule()
    	return true
  	}else { 
  	recule()
  	return false}
}
}